--- a/tasks/chapter_1.ipynb
+++ b/tasks/chapter_1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +60,7 @@
       "1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, \n",
       "-------------------------\n",
       "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024]\n",
+      "[1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1]\n",
       "[1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1]\n",
       "1024,512,256,128,64,32,16,8,4,2,1,"
      ]
@@ -74,8 +75,9 @@
     "\n",
     "l = [2**i for i in range(exponent + 1)]\n",
     "print(l)\n",
-    "#l_reversed = l.reverse()\n",
-    "#print(f\"{l_reversed}\")\n",
+    "l_reversed = l.copy()\n",
+    "l_reversed.reverse()\n",
+    "print(f\"{l_reversed}\")\n",
     "print (l[::-1])\n",
     "for i in reversed(l):\n",
     "    print(i, end = \",\")"
@@ -103,6 +105,105 @@
     "print (l[::-1])\n",
     "for i in reversed(l):\n",
     "    print(i, end = \",\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,6,9,12,15,18,21,24,27,30,33,36,39,42,45,48,51,54,57,60,63,66,69,72,75,78,81,84,87,90,93,96,99,"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [i for i in range(1,101)]\n",
+    "for n in numbers:\n",
+    "    if n % 3 == 0:\n",
+    "        print(n, end = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = 6\n",
+    "factorial = 1\n",
+    "n = 1\n",
+    "while n < end:\n",
+    "    factorial *= n\n",
+    "    n += 1\n",
+    "print(factorial) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, "
+     ]
+    }
+   ],
+   "source": [
+    "end = 20\n",
+    "prev = 1\n",
+    "prev2 = 1\n",
+    "current = 1\n",
+    "while current <= end:\n",
+    "    f = prev + prev2\n",
+    "    if current <=2:\n",
+    "        f = 1\n",
+    "        prev = 1\n",
+    "        prev2 = 1\n",
+    "    else:\n",
+    "        prev2 = prev\n",
+    "        prev = f\n",
+    "    current += 1\n",
+    "    print(f, end = ', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max2(l):\n",
+    "    ls = sorted(l)\n",
+    "    #ls.reverse()\n",
+    "    #return ls[1]\n",
+    "    return ls[-2]\n",
+    "\n",
+    "\n",
+    "numbers = [x for x in range(1,102)]\n",
+    "print(max2(numbers))\n"
    ]
   }
  ],
