--- a/tasks/chapter_1.ipynb
+++ b/tasks/chapter_1.ipynb
@@ -205,6 +205,30 @@
     "numbers = [x for x in range(1,102)]\n",
     "print(max2(numbers))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numbers ->  [1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31]\n",
+      "sum = 256\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = 15\n",
+    "odd = [x * 2 + 1 for x in range(0, end + 1)]\n",
+    "print (\"numbers -> \",odd)\n",
+    "s = 0\n",
+    "for i in odd:\n",
+    "    s += i\n",
+    "print(\"sum =\", s)"
+   ]
   }
  ],
  "metadata": {
