--- a/metods/file_class.ipynb
+++ b/metods/file_class.ipynb
@@ -59,6 +59,25 @@
     "        print(line, end = \"\")\n",
     "    mf.close\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.12.3 (v3.12.3:f6650f9ad7, Apr  9 2024, 08:18:47) [Clang 13.0.0 (clang-1300.0.29.30)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "print(sys.version)"
+   ]
   }
  ],
  "metadata": {
