--- a/metods/list_definition.ipynb
+++ b/metods/list_definition.ipynb
@@ -39,6 +39,32 @@
     "#reversed\n",
     "print(list(reversed(list(range(10)))))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice scored 85\n",
+      "Bob scored 90\n",
+      "Charlie scored 78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ZIP\n",
+    "\n",
+    "\n",
+    "names = [\"Alice\", \"Bob\", \"Charlie\"]\n",
+    "scores = [85, 90, 78]\n",
+    "\n",
+    "for name, score in zip(names, scores):\n",
+    "    print(f\"{name} scored {score}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -57,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
