--- a/metods/list_definition.ipynb
+++ b/metods/list_definition.ipynb
@@ -65,6 +65,30 @@
     "for name, score in zip(names, scores):\n",
     "    print(f\"{name} scored {score}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COPY\n",
+    "\n",
+    "# Использование метода list.copy():\n",
+    "original_list = [1, 2, 3]\n",
+    "copied_list = original_list.copy()\n",
+    "# Создает поверхностную копию списка\n",
+    "\n",
+    "# Использование срезов:\n",
+    "original_list = [1, 2, 3]\n",
+    "copied_list = original_list[:]\n",
+    "# Создает поверхностную копию списка\n",
+    "\n",
+    "# Использование функции list():\n",
+    "original_list = [1, 2, 3]\n",
+    "copied_list = list(original_list)\n",
+    "# Создает поверхностную копию списка\n"
+   ]
   }
  ],
  "metadata": {
