--- a/metods/list_definition.ipynb
+++ b/metods/list_definition.ipynb
@@ -89,6 +89,31 @@
     "copied_list = list(original_list)\n",
     "# Создает поверхностную копию списка\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сегодня стоит посмотреть: 🎬 Inception\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Случайный выбор из списка с random.choice()\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "movies = [\"🎬 Inception\", \"🎥 Interstellar\", \"📽 The Matrix\", \"🎞 The Dark Knight\"]\n",
+    "\n",
+    "random_movie = random.choice(movies)\n",
+    "\n",
+    "print(f\"Сегодня стоит посмотреть: {random_movie}\")\n"
+   ]
   }
  ],
  "metadata": {
