--- a/metods/for_while.ipynb
+++ b/metods/for_while.ipynb
@@ -86,6 +86,83 @@
     "    print(f\"x = {x}\", end = \", \")\n",
     "    x -= 1  # Уменьшаем x\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 1, 2, 3, 4, \n",
+      "0, 1, 2, 3, 4, 6, "
+     ]
+    }
+   ],
+   "source": [
+    "# BREAK, CONTINUE\n",
+    "\n",
+    "\n",
+    "# break – выход из цикла при достижении 5\n",
+    "for i in range(10):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i, end = \", \")  # Выведет 0,1,2,3,4\n",
+    "\n",
+    "print()\n",
+    "# continue – пропускает 5\n",
+    "for i in range(7):\n",
+    "    if i == 5:\n",
+    "        continue\n",
+    "    print(i, end = \", \")  # Выведет 0,1,2,3,4,6\n",
+    "\n",
+    "# pass – заглушка\n",
+    "for i in range(3):\n",
+    "    pass  # Код пока не написан\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FOR ELSE\n",
+    "\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"Цикл завершился без break\")\n",
+    "\n",
+    "# 0\n",
+    "# 1\n",
+    "# 2\n",
+    "# Цикл завершился без break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WHILE ELSE\n",
+    "\n",
+    "x = 3\n",
+    "while x > 0:\n",
+    "    print(x)\n",
+    "    x -= 1\n",
+    "else:\n",
+    "    print(\"Цикл while завершен\")\n",
+    "\n",
+    "# 3\n",
+    "# 2\n",
+    "# 1\n",
+    "# Цикл while завершен\n"
+   ]
   }
  ],
  "metadata": {
