--- a/metods/dictionary_definition.ipynb
+++ b/metods/dictionary_definition.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5}\n",
-      "{'apple', 'banana', 'orange'}\n"
+      "Ключ: a, Значение: 1\n",
+      "Ключ: b, Значение: 2\n",
+      "Ключ: c, Значение: 3\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Создание множества с уникальными элементами\n",
-    "unique_numbers = {1, 2, 3, 4, 5,5}\n",
-    "print(unique_numbers)\n",
-    "# Создание множества из списка\n",
-    "unique_fruits = set([\"apple\", \"banana\", \"apple\", \"orange\"])\n",
-    "print(unique_fruits)\n"
+    "# Создание словаря\n",
+    "my_dict = {'a': 1, 'b': 2, 'c': 3}\n",
+    "\n",
+    "# Перебор ключей и значений\n",
+    "for key, value in my_dict.items():\n",
+    "    # Вывод ключа и значения\n",
+    "    print(f\"Ключ: {key}, Значение: {value}\")\n"
    ]
   }
  ],
