--- a/metods/patterns.ipynb
+++ b/metods/patterns.ipynb
@@ -46,6 +46,47 @@
     "product = builder.get_result()\n",
     "print(product.show())  # Вывод: Part A, Part B\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adapter\n",
+    "\"\"\"\n",
+    "Паттерн Adapter позволяет объектам с несовместимыми интерфейсами работать вместе, \n",
+    "оборачивая один из объектов адаптером. \n",
+    "Адаптер преобразует интерфейс одного класса в интерфейс, ожидаемый клиентом.\n",
+    "\"\"\"\n",
+    "\n",
+    "class EuropeanSocket:\n",
+    "    def voltage(self):\n",
+    "        return 230\n",
+    "\n",
+    "class USASocket:\n",
+    "    def voltage(self):\n",
+    "        return 120\n",
+    "\n",
+    "class Adapter:\n",
+    "    def __init__(self, socket):\n",
+    "        self.socket = socket\n",
+    "\n",
+    "    def voltage(self):\n",
+    "        return self.socket.voltage()\n",
+    "\n",
+    "european_socket = EuropeanSocket()\n",
+    "adapter = Adapter(european_socket)\n",
+    "print(adapter.voltage())  # Использование адаптера для получения напряжения\n"
+   ]
   }
  ],
  "metadata": {
