--- a/metods/list_definition.ipynb
+++ b/metods/list_definition.ipynb
@@ -114,6 +114,39 @@
     "\n",
     "print(f\"Сегодня стоит посмотреть: {random_movie}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 3, 4, 5, 9]\n",
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SORTED\n",
+    "\n",
+    "\n",
+    "numbers = [3, 1, 4, 1, 5, 9]\n",
+    "\n",
+    "# Сортировка по возрастанию\n",
+    "sorted_numbers = sorted(numbers)\n",
+    "\n",
+    "# Сортировка по убыванию\n",
+    "sorted_numbers_desc = sorted(numbers, reverse=True)\n",
+    "print(sorted_numbers)\n",
+    "\n",
+    "# Сортировка строк по длине\n",
+    "words = [\"apple\", \"banana\", \"cherry\"]\n",
+    "sorted_words = sorted(words, key=len)\n",
+    "print(sorted_words)\n"
+   ]
   }
  ],
  "metadata": {
