--- a/tasks/test.ipynb
+++ b/tasks/test.ipynb
@@ -216,6 +216,337 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6, 7, 7, 8, 9, 9]\n",
+      "[1, 2, 3, 5, 6, 7, 7, 8, 9, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "list1 = [1,3,5,7,9]\n",
+    "list2 = [2,6,7,8,9]\n",
+    "\n",
+    "list  = sorted(list1 +list2)\n",
+    "#sorted(list1).extend(sorted(list2))\n",
+    "print(list)\n",
+    "\n",
+    "list1.extend(list2)\n",
+    "list1.sort()\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = ['a', 'b', 'c', 'd']\n",
+    "print(letters[5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t', 'e', 'p', 'i']\n",
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, *y, z = 'stepik'\n",
+    "print(y)\n",
+    "\n",
+    "txt = 'python'\n",
+    "for i in range(len(txt)):\n",
+    "    txt[i].upper()\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m txt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(txt)):\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mtxt\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m txt[i]\u001b[38;5;241m.\u001b[39mupper()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(txt)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'python'\n",
+    "for i in range(len(txt)):\n",
+    "    txt[i] = txt[i].upper()\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beegeek\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m list1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m9\u001b[39m]\n\u001b[1;32m      5\u001b[0m data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m10\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m5\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m]\n\u001b[0;32m----> 6\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mfilter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlist1\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "txt = 'python'\n",
+    "print(print('beegeek'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list1 = [1,3,5,7,9]\n",
+    "data = [10,'5', '', 0, None, True, False]\n",
+    "result = list(filter(lambda x : x == 10, data))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
+    "print(even_numbers)  # [2, 4, 6, 8, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'beegeek'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {}\n",
+    "data[1] = 'stepik'\n",
+    "data[True] = 'beegeek'\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "course\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = {'beegeek', 'stepik', 'python', 'course'}\n",
+    "element = list(words)[0]  # Берём первый элемент\n",
+    "print(element) \n",
+    "\n",
+    "#print(words[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 4, 5, 6, 7, 9]\n",
+      "None\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [5, 9, 1, 2, 0, 7, 6, 4]\n",
+    "sorted_numbers1 = sorted(numbers)\n",
+    "sorted_numbers2 = numbers.sort()\n",
+    "print(sorted_numbers1)\n",
+    "print(sorted_numbers2)\n",
+    "print(sorted_numbers1 == sorted_numbers2)\n",
+    "print(numbers.sort() == sorted_numbers2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['beegeek', 'y', 'e', 's', 'no']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['beegeek']\n",
+    "data.extend('yes')\n",
+    "data.append('no')\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n",
+      "[10, 10]\n",
+      "[10, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(data=[]):\n",
+    "    data.append(10)\n",
+    "    return data\n",
+    "\n",
+    "print(func())\n",
+    "print(func())\n",
+    "print(func())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [1, 2, 3]\n",
+    "new_data = data * 1\n",
+    "data[0] = 10\n",
+    "print(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 3\n",
+      "3 6\n",
+      "4 10\n",
+      "5 15\n",
+      "6 21\n",
+      "7 28\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reachTarget(target):\n",
+    "    target = abs(target)\n",
+    "    position = 0\n",
+    "    steps = 0\n",
+    "    while position < target or (position - target) % 2 != 0:\n",
+    "        steps += 1\n",
+    "        position += steps\n",
+    "        print(steps, position)\n",
+    "    return steps\n",
+    "\n",
+    "print(reachTarget(12))\n"
+   ]
   }
  ],
  "metadata": {
@@ -234,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
