--- a/tasks/test.ipynb
+++ b/tasks/test.ipynb
@@ -547,6 +547,31 @@
     "\n",
     "print(reachTarget(12))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 5, 2, 1, 1, 5]\n",
+    "\n",
+    "def f(items):\n",
+    "    s = set()\n",
+    "    for item in items:\n",
+    "        if item not in s:\n",
+    "            yield item\n",
+    "            s.add(item)\n",
+    "print(*f(a))\n"
+   ]
   }
  ],
  "metadata": {
