--- a/tasks/test.ipynb
+++ b/tasks/test.ipynb
@@ -572,6 +572,146 @@
     "            s.add(item)\n",
     "print(*f(a))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SGVsbG8sIHdvcmxkIQ==\n",
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import base64  \n",
+    "\n",
+    "message = b\"Hello, world!\"  \n",
+    "\n",
+    "# Кодируем в Base64  \n",
+    "encoded = base64.b64encode(message)  \n",
+    "print(encoded.decode())  # SGVsbG8sIHdvcmxkIQ==  \n",
+    "\n",
+    "# Декодируем обратно  \n",
+    "decoded = base64.b64decode(encoded)  \n",
+    "print(decoded.decode())  # Hello, world!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_abs_index(list):\n",
+    "    result = 0\n",
+    "    max_len = 0\n",
+    "    for i in range(0,len(list)) :\n",
+    "        str_lenght =  len(str(abs(list[i])))\n",
+    "        if  str_lenght > max_len :\n",
+    "            max_len = str_lenght\n",
+    "            result = i\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "print(max_abs_index([1, 2, 10, -100, 0, -45, 99]))  \n",
+    "print(max_abs_index([1, 2, 10, 100, 0, 78, 1000]))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1022\n"
+     ]
+    }
+   ],
+   "source": [
+    "#f = open('numbers.txt')\n",
+    "#l = f.readlines()\n",
+    "l = \" \\\n",
+    "1 2 3 \\\n",
+    "4    5   6 \\\n",
+    "    1001   \\\n",
+    "\"\n",
+    "sum = 0\n",
+    "\n",
+    "#for i in l:\n",
+    "j = l.split(' ')\n",
+    "for k in j:\n",
+    "    if len(k.strip()) > 0 :\n",
+    "        sum += int(k.strip())\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_middle_number(a, b, c):\n",
+    "    return (a + b + c)/3\n",
+    "\n",
+    "print(find_middle_number(1,2,3))\n",
+    "print(find_middle_number(3, 1, 2))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 7, 2, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def restore_values(list):\n",
+    "    min_value = min(list)\n",
+    "    add_value = int(min_value/2)\n",
+    "    new_list = []\n",
+    "    for i in list:\n",
+    "        new_list.append(i - add_value)\n",
+    "\n",
+    "    return new_list\n",
+    "\n",
+    "print(restore_values([5, 9, 4, 7, 8]))  \n",
+    "print(restore_values([2, 3, 4, 5, 6, 7, 8, 9, 10]))  "
+   ]
   }
  ],
  "metadata": {
