--- a/tasks/test.ipynb
+++ b/tasks/test.ipynb
@@ -712,6 +712,39 @@
     "print(restore_values([5, 9, 4, 7, 8]))  \n",
     "print(restore_values([2, 3, 4, 5, 6, 7, 8, 9, 10]))  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "36\n",
+      "100\n",
+      "3969\n"
+     ]
+    }
+   ],
+   "source": [
+    "def happy_tickets(summ):\n",
+    "    count = 0\n",
+    "    for i in range(0,10): \n",
+    "        for j in range(0,10): \n",
+    "            for k in range(0,10): \n",
+    "                if (i + j + k) == summ:\n",
+    "                    count += 1\n",
+    "                    break\n",
+    "    return count * count\n",
+    "\n",
+    "print(happy_tickets(1))\n",
+    "print(happy_tickets(2))\n",
+    "print(happy_tickets(3))\n",
+    "print(happy_tickets(10))"
+   ]
   }
  ],
  "metadata": {
